Fix: vue notification font size is too small

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -27,3 +27,7 @@ footer img {
   /* display the icon as circle */
   border-radius: 50%;
 }
+
+.vue-notification {
+  font-size: 20px;
+}
